--- a/index.html
+++ b/index.html
@@ -9,40 +9,42 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styles.css?version=1" rel="stylesheet">
+    <link rel="stylesheet" href="public/libs/font-awesome/css/font-awesome.min.css">
+    <link href="public/css/bootstrap.min.css" rel="stylesheet">
+    <link href="public/css/styles.css?version=1" rel="stylesheet">
 </head>
 
 <body>
     <div id="mobile-menu-open" class="shadow-large">
         <i class="fa fa-bars" aria-hidden="true"></i>
     </div>
+    <!-- <a href="#default" id="logo"><strong>Jimmy Chen</strong></a> -->
     <!-- End #mobile-menu-toggle -->
     <header>
         <div id="mobile-menu-close">
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
-        <ul id="menu" class="shadow">
-            <li>
-                <a href="#about">About</a>
-            </li>
-            <li>
-                <a href="#experience">Experience</a>
-            </li>
-            <li>
-                <a href="#education">Education</a>
-            </li>
-            <li>
-                <a href="#projects">Projects</a>
-            </li>
-            <li>
-                <a href="#skills">Skills</a>
-            </li>
-            <li>
-                <a href="#contact">Contact</a>
-            </li>
-        </ul>
+	        <ul id="menu" class="shadow">
+	            <li>
+	                <a href="#about">About</a>
+	            </li>
+	            <li>
+	                <a href="#experience">Experience</a>
+	            </li>
+	            <li>
+	                <a href="#education">Education</a>
+	            </li>
+	            <li>
+	                <a href="#projects">Projects</a>
+	            </li>
+	            <li>
+	                <a href="#skills">Skills</a>
+	            </li>
+	            <li>
+	                <a href="#contact">Contact</a>
+	            </li>
+	        </ul>
+    	</div>
     </header>
     <!-- End header -->
 
@@ -189,7 +191,7 @@
 
                 <div class="project shadow-large" id="project-1">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="../images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -205,7 +207,7 @@
 
                 <div class="project shadow-large"id="project-2">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="../images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -221,7 +223,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="../images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -327,8 +329,22 @@
     </footer>
     <!-- End footer -->
 
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
-    <!-- <script src="js/scripts.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="../js/scripts.min.js"></script>
+    <script>
+   	// When the user scrolls down 80px from the top of the document, resize the navbar's padding and the logo's font size
+    window.onscroll = function() {scrollFunction()};
+
+    function scrollFunction() {
+        if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
+        document.getElementById("menu").style.fontSize = "15px";
+        document.getElementById("menu").style.padding = "10px 10px";
+      } else {
+        document.getElementById("menu").style.fontSize = "20px";
+        document.getElementById("menu").style.padding = "30px 10px";
+      }
+    }
+    </script>
 </body>
 
 </html>
