--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Portfolio</title>
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+	<link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="public/libs/font-awesome/css/font-awesome.min.css">
-    <link href="public/css/bootstrap.min.css" rel="stylesheet">
-    <link href="public/css/styles.css?version=1" rel="stylesheet">
+    <link rel="stylesheet" href="./public/libs/font-awesome/css/font-awesome.min.css">
+    <link href="./public/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./public/css/styles.css?version=1" rel="stylesheet">
 </head>
 
 <body>
@@ -330,7 +330,7 @@
     <!-- End footer -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="../js/scripts.min.js"></script>
+    <script src="./public/js/scripts.min.js"></script>
     <script>
    	// When the user scrolls down 80px from the top of the document, resize the navbar's padding and the logo's font size
     window.onscroll = function() {scrollFunction()};
