--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
                 <div class="project shadow-large" id="project-1">
                     <div class="project-image">
-                        <img src="../images/project.jpg" />
+                        <img src="./public/images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -207,7 +207,7 @@
 
                 <div class="project shadow-large"id="project-2">
                     <div class="project-image">
-                        <img src="../images/project.jpg" />
+                        <img src="./public/images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -223,7 +223,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="../images/project.jpg" />
+                        <img src="./public/images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
