--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div id="lead-content">
             <h1>Jimmy Chen</h1>
             <h2>Full Stack / UX / Industrial Designer</h2>
-            <p><a href="#" class="btn-rounded-white" download>Download Resume</a></p>
+            <p><a href="public/images/JimmyChen-Master Resume-updated-2020-05-18.docx" class="btn-rounded-white" download>Download Resume</a></p>
         </div>
         <!-- End #lead-content -->
 
