--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="shortcut icon" href="public/images/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="public/images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -188,52 +189,53 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+                <div class="UX">
+                    <h3>UI/UX design</h3>
+                    <div class="project row" id="project-ux">
+                        <div class="project-image shadow-large" id="ux-1">
+                            <a type="button" data-toggle="modal" data-target="#ux-m1">
+                            <img src="public/images/project.jpg" />
+                            </a>
+                        </div>
 
-                <div class="project shadow-large" id="project-1">
-                    <div class="project-image">
-                        <img src="public/images/project.jpg" />
+                        <div class="project-image shadow-large" id="ux-2">
+                            <img src="public/images/project.jpg" />
+                        </div>
+
+                        <div class="project-image shadow-large" id="ux-3">
+                            <img src="public/images/project.jpg" />
+                        </div>
                     </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
-
-                <div class="project shadow-large"id="project-2">
-                    <div class="project-image">
-                        <img src="public/images/project.jpg" />
+                <div class="ID">
+                    <h3>Industrial Design</h3>
+                    <div class="project row" id="project-ux">
+                        <div class="project-image shadow-large" id="ux-1">
+                            <img src="public/images/project.jpg" />
+                        </div>
+                        <div class="project-image shadow-large" id="ux-2">
+                            <img src="public/images/project.jpg" />
+                        </div>
+                        <div class="project-image shadow-large" id="ux-3">
+                            <img src="public/images/project.jpg" />
+                        </div>
                     </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
-
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="public/images/project.jpg" />
+                <div class="PG">
+                    <h3>Programming</h3>
+                    <div class="project row" id="project-ux">
+                        <div class="project-image shadow-large" id="ux-1">
+                            <img src="public/images/project.jpg" />
+                        </div>
+                        <div class="project-image shadow-large" id="ux-2">
+                            <img src="public/images/project.jpg" />
+                        </div>
+                        <div class="project-image shadow-large" id="ux-3">
+                            <img src="public/images/project.jpg" />
+                        </div>
                     </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
 
@@ -241,6 +243,16 @@
         </div>
     </div>
     <!-- End #projects -->
+
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ux-m1">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            ...
+          </div>      
+        </div>
+      </div>
+    </div>
 
     <div id="skills">
         <h2 class="heading">Skills</h2>
@@ -331,6 +343,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="./public/js/scripts.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script>
    	// When the user scrolls down 80px from the top of the document, resize the navbar's padding and the logo's font size
     window.onscroll = function() {scrollFunction()};
