--- a/index.html
+++ b/index.html
@@ -192,49 +192,53 @@
                 <div class="UX">
                     <h3>UI/UX design</h3>
                     <div class="project row" id="project-ux">
-                        <div class="project-image shadow-large" id="ux-1">
-                            <a type="button" data-toggle="modal" data-target="#ux-m1">
-                            <img src="public/images/project.jpg" />
-                            </a>
-                        </div>
+                        <!-- <div class="project-image shadow-large" id="ux-1"> -->
+                        <a type="button" data-toggle="modal" data-target="#ux-m1" class="project-image shadow-large" id="ux-1" href="http://google.com">
+                        <img src="public/images/project.jpg" />
+                        </a>
+                        <!-- </div> -->
 
-                        <div class="project-image shadow-large" id="ux-2">
-                            <img src="public/images/project.jpg" />
-                        </div>
+                        <a type="button" data-toggle="modal" data-target="#ux-m2" class="project-image shadow-large" id="ux-2" href="http://google.com">
+                        <img src="public/images/project.jpg" />
+                        </a>
 
-                        <div class="project-image shadow-large" id="ux-3">
-                            <img src="public/images/project.jpg" />
-                        </div>
+                        <a type="button" data-toggle="modal" data-target="#ux-m3" class="project-image shadow-large" id="ux-3" href="http://google.com">
+                        <img src="public/images/project.jpg" />
+                        </a>
                     </div>
                 </div>
                 <!-- End .project -->
                 <div class="ID">
                     <h3>Industrial Design</h3>
                     <div class="project row" id="project-ux">
-                        <div class="project-image shadow-large" id="ux-1">
-                            <img src="public/images/project.jpg" />
-                        </div>
-                        <div class="project-image shadow-large" id="ux-2">
-                            <img src="public/images/project.jpg" />
-                        </div>
-                        <div class="project-image shadow-large" id="ux-3">
-                            <img src="public/images/project.jpg" />
-                        </div>
+                        <a type="button" data-toggle="modal" data-target="#id-m1" class="project-image shadow-large" id="id-1" href="http://google.com">
+                        <img src="public/images/project.jpg" />
+                        </a>
+
+                        <a type="button" data-toggle="modal" data-target="#id-m2" class="project-image shadow-large" id="id-2" href="http://google.com">
+                        <img src="public/images/project.jpg" />
+                        </a>
+
+                        <a type="button" data-toggle="modal" data-target="#id-m3" class="project-image shadow-large" id="id-3" href="http://google.com">
+                        <img src="public/images/project.jpg" />
+                        </a>
                     </div>
                 </div>
                 <!-- End .project -->
                 <div class="PG">
                     <h3>Programming</h3>
                     <div class="project row" id="project-ux">
-                        <div class="project-image shadow-large" id="ux-1">
-                            <img src="public/images/project.jpg" />
-                        </div>
-                        <div class="project-image shadow-large" id="ux-2">
-                            <img src="public/images/project.jpg" />
-                        </div>
-                        <div class="project-image shadow-large" id="ux-3">
-                            <img src="public/images/project.jpg" />
-                        </div>
+                        <a type="button" data-toggle="modal" data-target="#pg-m1" class="project-image shadow-large" id="pg-1" href="https://mi-tea.herokuapp.com/">
+                        <img src="public/images/project.jpg" />
+                        </a>
+
+                        <a type="button" data-toggle="modal" data-target="#pg-m2" class="project-image shadow-large" id="pg-2" href="http://google.com">
+                        <img src="public/images/project.jpg" />
+                        </a>
+
+                        <a type="button" data-toggle="modal" data-target="#pg-m3" class="project-image shadow-large" id="pg-3" href="http://google.com">
+                        <img src="public/images/project.jpg" />
+                        </a>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -244,45 +248,195 @@
     </div>
     <!-- End #projects -->
 
+    <!-- UX MODAL -->
     <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ux-m1">
-      <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-          <div class="modal-body">
-            ...
-          </div>      
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                      <iframe class="embed-responsive-item" src="https://github.com/embed" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>      
         </div>
-      </div>
+    </div>
+
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ux-m2">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                      <iframe class="embed-responsive-item" src="https://github.com/embed" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ux-m3">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                      <iframe class="embed-responsive-item" src="https://github.com/embed" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+
+    <!-- ID MODAL -->
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="id-m1">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                      <iframe class="embed-responsive-item" src="https://github.com/embed" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="id-m2">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                      <iframe class="embed-responsive-item" src="https://github.com/embed" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="id-m3">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                      <iframe class="embed-responsive-item" src="https://github.com/embed" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+
+    <!-- PG MODAL -->
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="pg-m1">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                      <iframe class="embed-responsive-item" src="https://mi-tea.herokuapp.com/" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="pg-m2">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                      <iframe class="embed-responsive-item" src="https://infrared-project2-ssj.herokuapp.com/" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="pg-m3">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                      <iframe class="embed-responsive-item" src="https://github.com/embed" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>      
+        </div>
     </div>
 
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
+            <li>Adobe Creative Suite</li>
+            <li>Sketch</li>
+            <li>Lucidchart</li>
+            <li>Axure</li>
+            <li>POP</li>
+            <li>Solidworks</li>
+            <li>Rhino</li>
+            <li>AutoCAD</li>
+            <li>Keyshot</li>
+            <li>3D Printing</li>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
+            <li>JQuery</li>
             <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>SCSS</li>
             <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Express</li>
+            <li>MongoDB</li>
+            <li>Python</li>
+            <li>Django</li>
         </ul>
     </div>
     <!-- End #skills -->
