--- a/index.html
+++ b/index.html
@@ -192,17 +192,17 @@
                 <div class="UX">
                     <h3>UI/UX design</h3>
                     <div class="project row" id="project-ux">
-                        <!-- <div class="project-image shadow-large" id="ux-1"> -->
-                        <a type="button" data-toggle="modal" data-target="#ux-m1" class="project-image shadow-large" id="ux-1" href="http://google.com">
+                        <div class="project-image shadow-large" id="ux-1">
+                        <a type="button" data-toggle="modal" data-target="#ux-m1" >
+                        <img src="public/images/project.jpg">
+                        </a>
+                        </div>
+
+                        <a type="button" data-toggle="modal" data-target="#ux-m2" class="project-image shadow-large" id="ux-2">
                         <img src="public/images/project.jpg" />
                         </a>
-                        <!-- </div> -->
 
-                        <a type="button" data-toggle="modal" data-target="#ux-m2" class="project-image shadow-large" id="ux-2" href="http://google.com">
-                        <img src="public/images/project.jpg" />
-                        </a>
-
-                        <a type="button" data-toggle="modal" data-target="#ux-m3" class="project-image shadow-large" id="ux-3" href="http://google.com">
+                        <a type="button" data-toggle="modal" data-target="#ux-m3" class="project-image shadow-large" id="ux-3">
                         <img src="public/images/project.jpg" />
                         </a>
                     </div>
