--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <div class="project row" id="project-ux">
                         <div class="project-image shadow-large" id="ux-1">
                         <a type="button" data-toggle="modal" data-target="#ux-m1" >
-                        <img src="public/images/project.jpg">
+                        <img src="public/images/project.jpg" />
                         </a>
                         </div>
 
@@ -211,15 +211,15 @@
                 <div class="ID">
                     <h3>Industrial Design</h3>
                     <div class="project row" id="project-ux">
-                        <a type="button" data-toggle="modal" data-target="#id-m1" class="project-image shadow-large" id="id-1" href="http://google.com">
+                        <a type="button" data-toggle="modal" data-target="#id-m1" class="project-image shadow-large" id="id-1">
                         <img src="public/images/project.jpg" />
                         </a>
 
-                        <a type="button" data-toggle="modal" data-target="#id-m2" class="project-image shadow-large" id="id-2" href="http://google.com">
+                        <a type="button" data-toggle="modal" data-target="#id-m2" class="project-image shadow-large" id="id-2">
                         <img src="public/images/project.jpg" />
                         </a>
 
-                        <a type="button" data-toggle="modal" data-target="#id-m3" class="project-image shadow-large" id="id-3" href="http://google.com">
+                        <a type="button" data-toggle="modal" data-target="#id-m3" class="project-image shadow-large" id="id-3">
                         <img src="public/images/project.jpg" />
                         </a>
                     </div>
@@ -228,15 +228,15 @@
                 <div class="PG">
                     <h3>Programming</h3>
                     <div class="project row" id="project-ux">
-                        <a type="button" data-toggle="modal" data-target="#pg-m1" class="project-image shadow-large" id="pg-1" href="https://mi-tea.herokuapp.com/">
+                        <a type="button" data-toggle="modal" data-target="#pg-m1" class="project-image shadow-large" id="pg-1">
                         <img src="public/images/project.jpg" />
                         </a>
 
-                        <a type="button" data-toggle="modal" data-target="#pg-m2" class="project-image shadow-large" id="pg-2" href="http://google.com">
+                        <a type="button" data-toggle="modal" data-target="#pg-m2" class="project-image shadow-large" id="pg-2">
                         <img src="public/images/project.jpg" />
                         </a>
 
-                        <a type="button" data-toggle="modal" data-target="#pg-m3" class="project-image shadow-large" id="pg-3" href="http://google.com">
+                        <a type="button" data-toggle="modal" data-target="#pg-m3" class="project-image shadow-large" id="pg-3">
                         <img src="public/images/project.jpg" />
                         </a>
                     </div>
