--- a/index.html
+++ b/index.html
@@ -194,19 +194,19 @@
                     <div class="project row" id="project-ux">
                         <div class="project-image" id="ux-1">
                         <a type="button" data-toggle="modal" data-target="#ux-m1">
-                        <img src="public/images/project.jpg" class="shadow-large" />
+                        <img src="public/images/project.jpg" />
                         </a>
                         </div>
                         
                         <div class="project-image" id="ux-2">
                         <a type="button" data-toggle="modal" data-target="#ux-m2">
-                        <img src="public/images/project.jpg" class="shadow-large" />
+                        <img src="public/images/project.jpg" />
                         </a>
                         </div>
                         
                         <div class="project-image" id="ux-3">
                         <a type="button" data-toggle="modal" data-target="#ux-m3">
-                        <img src="public/images/project.jpg" class="shadow-large" />
+                        <img src="public/images/project.jpg"/>
                         </a>
                         </div>
                     </div>
@@ -214,16 +214,16 @@
                 <!-- End .project -->
                 <div class="ID">
                     <h3>Industrial Design</h3>
-                    <div class="project row" id="project-ux">
-                        <a type="button" data-toggle="modal" data-target="#id-m1" class="project-image shadow-large" id="id-1">
+                    <div class="project row" id="project-id">
+                        <a type="button" data-toggle="modal" data-target="#id-m1" class="project-image " id="id-1">
                         <img src="public/images/project.jpg" />
                         </a>
 
-                        <a type="button" data-toggle="modal" data-target="#id-m2" class="project-image shadow-large" id="id-2">
+                        <a type="button" data-toggle="modal" data-target="#id-m2" class="project-image " id="id-2">
                         <img src="public/images/project.jpg" />
                         </a>
 
-                        <a type="button" data-toggle="modal" data-target="#id-m3" class="project-image shadow-large" id="id-3">
+                        <a type="button" data-toggle="modal" data-target="#id-m3" class="project-image " id="id-3">
                         <img src="public/images/project.jpg" />
                         </a>
                     </div>
@@ -231,16 +231,16 @@
                 <!-- End .project -->
                 <div class="PG">
                     <h3>Programming</h3>
-                    <div class="project row" id="project-ux">
-                        <a type="button" data-toggle="modal" data-target="#pg-m1" class="project-image shadow-large" id="pg-1">
+                    <div class="project row" id="project-pg">
+                        <a type="button" data-toggle="modal" data-target="#pg-m1" class="project-image " id="pg-1">
                         <img src="public/images/project.jpg" />
                         </a>
 
-                        <a type="button" data-toggle="modal" data-target="#pg-m2" class="project-image shadow-large" id="pg-2">
+                        <a type="button" data-toggle="modal" data-target="#pg-m2" class="project-image " id="pg-2">
                         <img src="public/images/project.jpg" />
                         </a>
 
-                        <a type="button" data-toggle="modal" data-target="#pg-m3" class="project-image shadow-large" id="pg-3">
+                        <a type="button" data-toggle="modal" data-target="#pg-m3" class="project-image " id="pg-3">
                         <img src="public/images/project.jpg" />
                         </a>
                     </div>
