--- a/index.html
+++ b/index.html
@@ -192,19 +192,19 @@
                 <div class="UX">
                     <h3>UI/UX design</h3>
                     <div class="project row" id="project-ux">
-                        <div class="project-image" id="ux-1">
+                        <div class="project-image shadow-lg" id="ux-1">
                         <a type="button" data-toggle="modal" data-target="#ux-m1">
                         <img src="public/images/project.jpg" />
                         </a>
                         </div>
                         
-                        <div class="project-image" id="ux-2">
+                        <div class="project-image shadow-lg" id="ux-2">
                         <a type="button" data-toggle="modal" data-target="#ux-m2">
                         <img src="public/images/project.jpg" />
                         </a>
                         </div>
                         
-                        <div class="project-image" id="ux-3">
+                        <div class="project-image shadow-lg" id="ux-3">
                         <a type="button" data-toggle="modal" data-target="#ux-m3">
                         <img src="public/images/project.jpg"/>
                         </a>
@@ -215,15 +215,15 @@
                 <div class="ID">
                     <h3>Industrial Design</h3>
                     <div class="project row" id="project-id">
-                        <a type="button" data-toggle="modal" data-target="#id-m1" class="project-image " id="id-1">
+                        <a type="button" data-toggle="modal" data-target="#id-m1" class="project-image shadow-lg" id="id-1">
                         <img src="public/images/project.jpg" />
                         </a>
 
-                        <a type="button" data-toggle="modal" data-target="#id-m2" class="project-image " id="id-2">
+                        <a type="button" data-toggle="modal" data-target="#id-m2" class="project-image shadow-lg" id="id-2">
                         <img src="public/images/project.jpg" />
                         </a>
 
-                        <a type="button" data-toggle="modal" data-target="#id-m3" class="project-image " id="id-3">
+                        <a type="button" data-toggle="modal" data-target="#id-m3" class="project-image shadow-lg" id="id-3">
                         <img src="public/images/project.jpg" />
                         </a>
                     </div>
