--- a/index.html
+++ b/index.html
@@ -194,19 +194,19 @@
                     <div class="project row" id="project-ux">
                         <div class="project-image" id="ux-1">
                         <a type="button" data-toggle="modal" data-target="#ux-m1">
-                        <img src="public/images/project.jpg" />
+                        <img src="public/images/project.jpg" class="p-image">
                         </a>
                         </div>
                         
                         <div class="project-image" id="ux-2">
                         <a type="button" data-toggle="modal" data-target="#ux-m2">
-                        <img src="public/images/project.jpg" />
+                        <img src="public/images/project.jpg" class="p-image">
                         </a>
                         </div>
                         
                         <div class="project-image" id="ux-3">
                         <a type="button" data-toggle="modal" data-target="#ux-m3">
-                        <img src="public/images/project.jpg"/>
+                        <img src="public/images/project.jpg" class="p-image">
                         </a>
                         </div>
                     </div>
@@ -216,15 +216,15 @@
                     <h3>Industrial Design</h3>
                     <div class="project row" id="project-id">
                         <a type="button" data-toggle="modal" data-target="#id-m1" class="project-image" id="id-1">
-                        <img src="public/images/project.jpg" />
+                        <img src="public/images/project.jpg" class="p-image">
                         </a>
 
                         <a type="button" data-toggle="modal" data-target="#id-m2" class="project-image" id="id-2">
-                        <img src="public/images/project.jpg" />
+                        <img src="public/images/project.jpg" class="p-image">
                         </a>
 
                         <a type="button" data-toggle="modal" data-target="#id-m3" class="project-image" id="id-3">
-                        <img src="public/images/project.jpg" />
+                        <img src="public/images/project.jpg" class="p-image">
                         </a>
                     </div>
                 </div>
@@ -233,15 +233,15 @@
                     <h3>Programming</h3>
                     <div class="project row" id="project-pg">
                         <a type="button" data-toggle="modal" data-target="#pg-m1" class="project-image" id="pg-1">
-                        <img src="public/images/project.jpg">
+                        <img src="public/images/project.jpg" class="p-image">
                         </a>
 
                         <a type="button" data-toggle="modal" data-target="#pg-m2" class="project-image" id="pg-2">
-                        <img src="public/images/project.jpg">
+                        <img src="public/images/project.jpg" class="p-image">
                         </a>
 
                         <a type="button" data-toggle="modal" data-target="#pg-m3" class="project-image" id="pg-3">
-                        <img src="public/images/project.jpg">
+                        <img src="public/images/project.jpg" class="p-image">
                         </a>
                     </div>
                 </div>
