--- a/index.html
+++ b/index.html
@@ -192,23 +192,19 @@
                 <div class="UX">
                     <h3>UI/UX design</h3>
                     <div class="project row" id="project-ux">
-                        <div class="project-image" id="ux-1">
-                        <a type="button" data-toggle="modal" data-target="#ux-m1">
+
+                        <a type="button" data-toggle="modal" data-target="#ux-m1" class="project-image" id="ux-1">
                         <img src="public/images/project.jpg" class="p-image">
                         </a>
-                        </div>
                         
-                        <div class="project-image" id="ux-2">
-                        <a type="button" data-toggle="modal" data-target="#ux-m2">
+                        <a type="button" data-toggle="modal" data-target="#ux-m2" class="project-image" id="ux-2">
                         <img src="public/images/project.jpg" class="p-image">
                         </a>
-                        </div>
                         
-                        <div class="project-image" id="ux-3">
-                        <a type="button" data-toggle="modal" data-target="#ux-m3">
+                        <a type="button" data-toggle="modal" data-target="#ux-m3" class="project-image" id="ux-3">
                         <img src="public/images/project.jpg" class="p-image">
                         </a>
-                        </div>
+
                     </div>
                 </div>
                 <!-- End .project -->
