--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
-        <div class="container">
+        <!-- <div class="container"> -->
             <div class="row">
                 <div class="UX">
                     <h3>UI/UX design</h3>
@@ -244,7 +244,7 @@
                 <!-- End .project -->
 
             </div>
-        </div>
+        <!-- </div> -->
     </div>
     <!-- End #projects -->
 
