--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<link rel="icon" href="public/images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="./public/libs/font-awesome/css/font-awesome.min.css">
-    <!-- <link href="./public/css/bootstrap.min.css" rel="stylesheet"> -->
-    <link href="./public/css/styles.css?version=1" rel="stylesheet">
+    <link href="./public/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="./public/css/styles.css" rel="stylesheet"> -->
 </head>
 
 <body>
