--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="./public/libs/font-awesome/css/font-awesome.min.css">
     <link href="./public/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link href="./public/css/styles.css" rel="stylesheet"> -->
+    <link href="./public/css/styles.css?version=1" rel="stylesheet">
 </head>
 
 <body>
@@ -191,7 +191,7 @@
             <div class="row">
                 <div class="UX">
                     <h3>UI/UX design</h3>
-                    <div class="project row" id="project-ux">
+                    <div class="project" id="project-ux">
 
                         <a type="button" data-toggle="modal" data-target="#ux-m1" class="project-image" id="ux-1">
                         <img src="public/images/project.jpg" class="p-image">
@@ -210,7 +210,7 @@
                 <!-- End .project -->
                 <div class="ID">
                     <h3>Industrial Design</h3>
-                    <div class="project row" id="project-id">
+                    <div class="project" id="project-id">
                         <a type="button" data-toggle="modal" data-target="#id-m1" class="project-image" id="id-1">
                         <img src="public/images/project.jpg" class="p-image">
                         </a>
@@ -227,7 +227,7 @@
                 <!-- End .project -->
                 <div class="PG">
                     <h3>Programming</h3>
-                    <div class="project row" id="project-pg">
+                    <div class="project" id="project-pg">
                         <a type="button" data-toggle="modal" data-target="#pg-m1" class="project-image" id="pg-1">
                         <img src="public/images/project.jpg" class="p-image">
                         </a>
