--- a/index.html
+++ b/index.html
@@ -191,14 +191,14 @@
             <div class="row">
                 <div class="UX">
                     <h3>UI/UX design</h3>
-                    <div class="project" id="project-ux">
+                    <div class="project row" id="project-ux">
 
-                        <a type="button" data-toggle="modal" data-target="#ux-m1" class="project-image" id="ux-1">
+                        <a data-toggle="modal" data-target="#ux-m1" class="project-image" id="ux-1">
                         <img src="public/images/project.jpg" class="p-image">
                         </a>
                         
-                        <a type="button" data-toggle="modal" data-target="#ux-m2" class="project-image" id="ux-2">
-                        <img src="public/images/project.jpg" class="p-image">
+                        <a data-toggle="modal" data-target="#ux-m2" class="project-image" id="ux-2">
+                        <img src="public/images/project.jpg" class="p-image" type="button">
                         </a>
                         
                         <a type="button" data-toggle="modal" data-target="#ux-m3" class="project-image" id="ux-3">
@@ -210,7 +210,7 @@
                 <!-- End .project -->
                 <div class="ID">
                     <h3>Industrial Design</h3>
-                    <div class="project" id="project-id">
+                    <div class="project row" id="project-id">
                         <a type="button" data-toggle="modal" data-target="#id-m1" class="project-image" id="id-1">
                         <img src="public/images/project.jpg" class="p-image">
                         </a>
@@ -227,7 +227,7 @@
                 <!-- End .project -->
                 <div class="PG">
                     <h3>Programming</h3>
-                    <div class="project" id="project-pg">
+                    <div class="project row" id="project-pg">
                         <a type="button" data-toggle="modal" data-target="#pg-m1" class="project-image" id="pg-1">
                         <img src="public/images/project.jpg" class="p-image">
                         </a>
