--- a/index.html
+++ b/index.html
@@ -193,16 +193,16 @@
                     <h3>UI/UX design</h3>
                     <div class="project row" id="project-ux">
 
-                        <a data-toggle="modal" data-target="#ux-m1" class="project-image" id="ux-1">
-                        <img src="public/images/project.jpg" class="p-image">
+                        <a data-toggle="modal" data-target="#ux-m1" class="project-image btn" id="ux-1">
+                        <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
                         
                         <a data-toggle="modal" data-target="#ux-m2" class="project-image" id="ux-2">
-                        <img src="public/images/project.jpg" class="p-image" type="button">
+                        <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
                         
-                        <a type="button" data-toggle="modal" data-target="#ux-m3" class="project-image" id="ux-3">
-                        <img src="public/images/project.jpg" class="p-image">
+                        <a data-toggle="modal" data-target="#ux-m3" class="project-image" id="ux-3">
+                        <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
 
                     </div>
@@ -211,16 +211,16 @@
                 <div class="ID">
                     <h3>Industrial Design</h3>
                     <div class="project row" id="project-id">
-                        <a type="button" data-toggle="modal" data-target="#id-m1" class="project-image" id="id-1">
-                        <img src="public/images/project.jpg" class="p-image">
+                        <a data-toggle="modal" data-target="#id-m1" class="project-image" id="id-1">
+                        <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
 
-                        <a type="button" data-toggle="modal" data-target="#id-m2" class="project-image" id="id-2">
-                        <img src="public/images/project.jpg" class="p-image">
+                        <a data-toggle="modal" data-target="#id-m2" class="project-image" id="id-2">
+                        <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
 
-                        <a type="button" data-toggle="modal" data-target="#id-m3" class="project-image" id="id-3">
-                        <img src="public/images/project.jpg" class="p-image">
+                        <a data-toggle="modal" data-target="#id-m3" class="project-image" id="id-3">
+                        <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
                     </div>
                 </div>
@@ -228,16 +228,16 @@
                 <div class="PG">
                     <h3>Programming</h3>
                     <div class="project row" id="project-pg">
-                        <a type="button" data-toggle="modal" data-target="#pg-m1" class="project-image" id="pg-1">
-                        <img src="public/images/project.jpg" class="p-image">
+                        <a data-toggle="modal" data-target="#pg-m1" class="project-image" id="pg-1">
+                        <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
 
-                        <a type="button" data-toggle="modal" data-target="#pg-m2" class="project-image" id="pg-2">
-                        <img src="public/images/project.jpg" class="p-image">
+                        <a data-toggle="modal" data-target="#pg-m2" class="project-image" id="pg-2">
+                        <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
 
-                        <a type="button" data-toggle="modal" data-target="#pg-m3" class="project-image" id="pg-3">
-                        <img src="public/images/project.jpg" class="p-image">
+                        <a data-toggle="modal" data-target="#pg-m3" class="project-image" id="pg-3">
+                        <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
                     </div>
                 </div>
