--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
                         <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
                         
-                        <a data-toggle="modal" data-target="#ux-m2" class="project-image" id="ux-2">
+                        <a data-toggle="modal" data-target="#ux-m2" class="project-image btn" id="ux-2">
                         <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
                         
-                        <a data-toggle="modal" data-target="#ux-m3" class="project-image" id="ux-3">
+                        <a data-toggle="modal" data-target="#ux-m3" class="project-image btn" id="ux-3">
                         <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
 
@@ -211,15 +211,15 @@
                 <div class="ID">
                     <h3>Industrial Design</h3>
                     <div class="project row" id="project-id">
-                        <a data-toggle="modal" data-target="#id-m1" class="project-image" id="id-1">
+                        <a data-toggle="modal" data-target="#id-m1" class="project-image btn" id="id-1">
                         <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
 
-                        <a data-toggle="modal" data-target="#id-m2" class="project-image" id="id-2">
+                        <a data-toggle="modal" data-target="#id-m2" class="project-image btn" id="id-2">
                         <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
 
-                        <a data-toggle="modal" data-target="#id-m3" class="project-image" id="id-3">
+                        <a data-toggle="modal" data-target="#id-m3" class="project-image btn" id="id-3">
                         <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
                     </div>
@@ -228,15 +228,15 @@
                 <div class="PG">
                     <h3>Programming</h3>
                     <div class="project row" id="project-pg">
-                        <a data-toggle="modal" data-target="#pg-m1" class="project-image" id="pg-1">
+                        <a data-toggle="modal" data-target="#pg-m1" class="project-image btn" id="pg-1">
                         <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
 
-                        <a data-toggle="modal" data-target="#pg-m2" class="project-image" id="pg-2">
+                        <a data-toggle="modal" data-target="#pg-m2" class="project-image btn" id="pg-2">
                         <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
 
-                        <a data-toggle="modal" data-target="#pg-m3" class="project-image" id="pg-3">
+                        <a data-toggle="modal" data-target="#pg-m3" class="project-image btn" id="pg-3">
                         <img src="public/images/project.jpg" class="p-image shadow-lg">
                         </a>
                     </div>
@@ -370,7 +370,7 @@
                 </div>
                 <div class="modal-body mb-0 p-0">
                     <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="https://mi-tea.herokuapp.com/" allowfullscreen></iframe>
+                      <iframe class="embed-responsive-item" src="./public/images/mi-tea.pdf" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>      
@@ -406,7 +406,7 @@
                 </div>
                 <div class="modal-body mb-0 p-0">
                     <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="https://github.com/embed" allowfullscreen></iframe>
+                      <iframe class="embed-responsive-item" src="./public/images/king-kong.pdf" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>      
