--- a/index.html
+++ b/index.html
@@ -368,9 +368,9 @@
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body mb-0 p-0">
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="./public/images/mi-tea.pdf" allowfullscreen></iframe>
+                <div class="modal-body mb-0 p-0 pg-m1">
+                    <div class="z-depth-1-half">
+                      <iframe frameborder="0" style="overflow:scroll;height:500px;width:100%" height="100%" width="100%" src="./public/images/mi-tea.pdf" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>      
@@ -404,7 +404,7 @@
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body mb-0 p-0">
+                <div class="modal-body mb-0 p-0 pg-m3">
                     <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
                       <iframe class="embed-responsive-item" src="./public/images/king-kong.pdf" allowfullscreen></iframe>
                     </div>
