--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 </div>
                 <div class="modal-body mb-0 p-0 pg-m1">
                     <div class="z-depth-1-half">
-                      <iframe frameborder="0" style="overflow:scroll;height:500px;width:100%" height="100%" width="100%" src="./public/images/mi-tea.pdf" allowfullscreen></iframe>
+                      <iframe class="responsive-iframe" frameborder="0" style="overflow:scroll;height:600px;width:100%" height="100%" width="100%" src="./public/images/mi-tea.pdf" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>      
